// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "c5d3611b4fc5cae1",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 81,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 232,
  "paths": 0,
  "selects": 0,
  "sha": "b85831061e0ea5e8",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 94,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 173,
  "paths": 0,
  "selects": 0,
  "sha": "64abca02b9c10a9a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "2b1e817295902506",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 85,
  "paths": 0,
  "selects": 0,
  "sha": "1c6aee7c91924f97",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 56,
  "paths": 0,
  "selects": 0,
  "sha": "cc6c5bc8ee37da35",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 25,
  "canvases": 0,
  "inputs": 8,
  "lengthBucket": 278,
  "paths": 6,
  "selects": 0,
  "sha": "019dfbe88ce09f1f",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 178,
  "paths": 0,
  "selects": 0,
  "sha": "a85dab49b94d7b4d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "3cb160e8d07472be",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 97,
  "paths": 0,
  "selects": 0,
  "sha": "999fb44bfbfe0601",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "1ef8063d34320e25",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "ab0ecc83fc0babae",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 13,
  "lengthBucket": 482,
  "paths": 6,
  "selects": 1,
  "sha": "04bf904af054e83f",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 208,
  "paths": 0,
  "selects": 0,
  "sha": "537b9cbd7a5ee70a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 48,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 209,
  "paths": 2,
  "selects": 2,
  "sha": "b96362c81b18104a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 236,
  "paths": 1,
  "selects": 0,
  "sha": "f6499f6873de2087",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "0de5c7a3b3dbc05e",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 198,
  "paths": 0,
  "selects": 0,
  "sha": "bc82022851912a8f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 228,
  "paths": 0,
  "selects": 0,
  "sha": "713a92812bead04f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 54,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 129,
  "paths": 0,
  "selects": 0,
  "sha": "018c776fbdc00d44",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "676eb9c92238a66d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 104,
  "paths": 0,
  "selects": 0,
  "sha": "319bb81774e5d2ab",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 107,
  "paths": 0,
  "selects": 2,
  "sha": "88a54559e3c23fcd",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 167,
  "paths": 22,
  "selects": 1,
  "sha": "376cf07fe2752fbc",
  "svgs": 13,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "selects": 0,
  "sha": "d75e031efb262e37",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 108,
  "paths": 0,
  "selects": 2,
  "sha": "eaaab887a496f7fa",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 83,
  "paths": 0,
  "selects": 0,
  "sha": "89f2270587999123",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 69,
  "paths": 0,
  "selects": 0,
  "sha": "c6ac39a17d1fbccd",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 281,
  "paths": 0,
  "selects": 0,
  "sha": "e986e01538e068fe",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 70,
  "paths": 0,
  "selects": 0,
  "sha": "b91b5384eace4125",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 5,
  "lengthBucket": 187,
  "paths": 0,
  "selects": 1,
  "sha": "ec9d034eb4a1311f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 120,
  "paths": 0,
  "selects": 0,
  "sha": "ca345a9cec840393",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "b8c3f1587cc32183",
  "svgs": 0,
}
`;
